Add comparators, specification